<resources>
    <string name="app_name">Stock</string>

    <string name="stock_title">Stocks</string>
    <string name="stock_section_portfolio">Portfolio</string>
    <string name="stock_section_favorites">Favorites</string>
    <string name="stock_link_tiingo"><a href="https://www.tiingo.com/" color="red">Powered by tiingo</a></string>


    <string name="cd_avatar_icon">Avatar icon</string>
    <string name="aapl">AAPL</string>
    <string name="_5_0_shares">5.0 shares</string>
    <string name="_1584_29">1584.29</string>
    <string name="trade">TRADE</string>
    <string name="portfolio">Portfolio</string>
    <string name="about">About</string>
    <string name="stats">Stats</string>
    <string name="news">News</string>
    <string name="shares">shares</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="show_more">Show more...</string>
    <string name="net_worth">Net Worth</string>
</resources>