<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:padding="20dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sharesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:text="TextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:id="@+id/shares_trade_edit_text_detail"
            android:hint="0"
            android:textColor="#787878"
            android:textSize="30dp"></EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shares"
            android:textSize="15dp"
            android:textColor="@color/colorBlack">
        </TextView>



    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textColor="@color/colorBlack"
        android:id="@+id/result_trade_by_edit_tv_detail">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/available_dollar_myself_tv"
        android:layout_marginTop="30dp"
        android:textSize="15dp">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/buy"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners"
            android:id="@+id/buy_stock_btn_detail"
            android:textColor="@color/colorWhite"
            ></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/sell"
            android:id="@+id/sell_stock_btn_detail"
            android:background="@drawable/rounded_corners"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            ></Button>
    </LinearLayout>

</LinearLayout>