<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <View
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#C9C8C9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/stock_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/aapl"
        android:textColor="@color/colorBlack"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/stock_shares_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal_line"></TextView>

    <TextView
        android:id="@+id/stock_shares_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/_5_0_shares"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stock_name_tv"></TextView>


    <TextView
        android:id="@+id/stock_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_1584_29"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="22dp"
        app:layout_constraintRight_toLeftOf="@id/stock_arrow_imv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <TextView
        android:id="@+id/stock_trend_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="12"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@id/stock_arrow_imv"
        app:layout_constraintTop_toBottomOf="@id/stock_value_tv"></TextView>

    <ImageView
        android:id="@+id/stock_arrow_imv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/stock_value_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <ImageView
        android:id="@+id/stock_trend_imv"
        android:layout_width="20dp"
        android:layout_height="19dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="4dp"
        android:src="@drawable/ic_twotone_trending_up_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/stock_trend_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stock_value_tv"
        app:layout_constraintVertical_bias="1.0"></ImageView>


</androidx.constraintlayout.widget.ConstraintLayout>