<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.StockDetailActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:background="#F4F2F4">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/detail_progress_linear"
        android:gravity="center_vertical"
        android:orientation="vertical"
        >
        <ProgressBar
            android:id="@+id/progress_wait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#F4F2F4"
            android:indeterminate="true"
            android:indeterminateTint="#6100EB"
            android:visibility="visible"></ProgressBar>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="Fetching Data" />
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first_section"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stock_ticker_tv_detail"
            android:text="MSFT"
            android:textSize="27dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            app:layout_constraintLeft_toLeftOf="@id/first_section"
            app:layout_constraintTop_toTopOf="@id/first_section"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stock_name_tv_detail"
            android:text="Micor apple"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/stock_ticker_tv_detail"
            app:layout_constraintLeft_toLeftOf="@id/first_section"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="27dp"
            android:textStyle="bold"
            android:text="$210.08"
            android:textColor="@color/colorBlack"
            android:id="@+id/stock_value_tv_detail"
            app:layout_constraintRight_toRightOf="@id/first_section"
            app:layout_constraintTop_toTopOf="@id/first_section"
            ></TextView>
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="$6.15"
            android:id="@+id/stock_change_tv_detail"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="@id/first_section"
            app:layout_constraintBottom_toBottomOf="@id/first_section"
            app:layout_constraintTop_toBottomOf="@id/stock_value_tv_detail"
            ></TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <WebView
        android:id="@+id/chart_web_view_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

    </WebView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textSize="22dp"
        android:textStyle="bold"
        android:text="@string/portfolio"
        android:textColor="@color/colorBlack"

        >
    </TextView>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kdsjaf;lkdsjf\r\nlasjdflksdj"
            android:id="@+id/user_portfolio_tv_detail"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="15dp"
            >

        </TextView>

        <Button
            android:id="@+id/trade_btn_detail"
            android:layout_width="152dp"
            android:layout_height="36dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/trade"
            android:textColor="@color/colorWhite"></Button>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:textStyle="bold"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack"
        android:text="@string/stats">
    </TextView>

    <GridView
        android:id="@+id/stats_grid_view_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:numColumns="3"
        >

    </GridView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:textStyle="bold"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/colorBlack"
        android:text="@string/about"
        >
    </TextView>
    <TextView
        android:id="@+id/about_tv_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:maxLines="2"
        android:textColor="@color/colorBlack"
        >

    </TextView>
    <Button
        android:id="@+id/show_more_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_more"
        android:layout_gravity="right"
        android:textAllCaps="false"
        android:textColor="#888788"
        android:layout_marginRight="10dp"
        style="?android:attr/borderlessButtonStyle"
        >
    </Button>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:text="@string/news"
        >
    </TextView>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <ImageView
                    android:id="@+id/first_article_image_view_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/first_article_time_tv_detail"
                android:textSize="15dp"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:maxLines="3"
                android:ellipsize="end"
                android:textColor="@color/colorBlack"
                android:id="@+id/first_article_title_tv_detail">

            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/news_recycler_view_detail"
        ></androidx.recyclerview.widget.RecyclerView>
</LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>